--- a/style.css
+++ b/style.css
@@ -35,9 +35,38 @@ nav ul li{
     font-weight:900;
     font-size: 1.3rem;
 }
-
+.container{
+    min-height: 52.5svh;
+    background-color: black;
+    color: white;
+    display: flex;
+    width:70%;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 20px auto;
+    background-image: url('/views/images/bg.jpg');
+}
 .bottom{
     position: sticky;
-    height:120px;
+    height:135px;
     background-color:black ;
+    color:white;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* margin: 15px 0; */
+}
+
+#myProgressBar{
+    width:80vw;
+   
+}
+
+.icons{
+    margin-top: 14px ;
+}
+.icons span{
+    cursor: pointer;
 }
