--- a/style.css
+++ b/style.css
@@ -1,72 +1,107 @@
-body{
-    background-color: antiquewhite;
+body {
+  background-color: antiquewhite;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-nav{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+nav {
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-nav ul{
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    height: 65px;
-    background-color: black;
-    color:white
+nav ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  height: 65px;
+  background-color: black;
+  color: white;
 }
-nav ul li{
-    padding:0px 12px;
-}
-
-.brand img{
-    width: 65px;
-    padding: 4px;
-
+nav ul li {
+  padding: 0px 12px;
 }
 
-.brand{
-    display: flex;
-    align-items: center;
-    font-weight:900;
-    font-size: 1.3rem;
-}
-.container{
-    min-height: 52.5svh;
-    background-color: black;
-    color: white;
-    display: flex;
-    width:70%;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 20px auto;
-    background-image: url('/views/images/bg.jpg');
-}
-.bottom{
-    position: sticky;
-    height:135px;
-    background-color:black ;
-    color:white;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* margin: 15px 0; */
+.brand img {
+  width: 65px;
+  padding: 4px;
 }
 
-#myProgressBar{
-    width:80vw;
-   
+.brand {
+  display: flex;
+  align-items: center;
+  font-weight: 900;
+  font-size: 1.3rem;
+}
+.container {
+  min-height: 52.5svh;
+  background-color: black;
+  color: white;
+  display: flex;
+  width: 70%;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 20px auto;
+  background-image: url("/views/images/bg.jpg");
+}
+.bottom {
+  position: sticky;
+  height: 135px;
+  background-color: black;
+  color: white;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin: 15px 0; */
 }
 
-.icons{
-    margin-top: 14px ;
+#myProgressBar {
+  width: 80vw;
+  cursor: pointer;
 }
-.icons span{
-    cursor: pointer;
+
+.icons {
+  margin-top: 14px;
+}
+.icons span {
+  cursor: pointer;
+}
+.songItemContainer {
+  margin-top: 10px;
+}
+.songItem {
+  height: 43px;
+  display: flex;
+  background-color: white;
+  width: 145%;
+  color: black;
+  margin: 12px 0;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.songItem img {
+  width: 43px;
+  margin: 0 23px 0;
+  border-radius: 20px;
+}
+
+.timestamp {
+  margin: 0 23px;
+  cursor: pointer;
+}
+
+.songInfo {
+  position: absolute;
+  left: 5vw;
+  text-align: center;
+}
+
+.songInfo img {
+  opacity: 0;
+  transition: opacity 1s ease-in;
 }
